force-app/main/default/objects/SBC_Capability__mdt/SBC_Capability__mdt.object-meta.xml
<CustomObject>
    <description>Defines the lightweight catalog of SBC business capabilities.</description>
    <label>SBC Capability</label>
    <pluralLabel>SBC Capabilities</pluralLabel>
</CustomObject>