force-app/main/default/objects/SBC_Capability__mdt/fields/Handler_Key__c.field-meta.xml
<CustomField>
    <fullName>Handler_Key__c</fullName>
    <label>Handler Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>