force-app/main/default/objects/SBC_Capability__mdt/fields/Requires_Human_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Human_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Human Approval</label>
    <type>Checkbox</type>
</CustomField>